Migration to new Doclet API